--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg"
+    android:background="@drawable/bg2"
     tools:context=".MainActivity3">
 
     <LinearLayout
@@ -56,129 +56,129 @@
             android:layout_marginBottom="20dp"
             android:background="?android:attr/listDivider" />
 
-    <ScrollView
-        android:id="@+id/scrollView2"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/dayview20"
+        <ScrollView
+            android:id="@+id/scrollView2"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/aclonica"
-            android:gravity="center"
-            android:text="BREAKFAST"
-            android:textColor="@color/design_default_color_on_secondary"
-            android:textSize="24sp" />
+            android:layout_height="match_parent">
 
-        <View
-            android:id="@+id/divider13"
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_marginBottom="10dp"
-            android:background="?android:attr/listDivider" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/bfmeal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@android:drawable/divider_horizontal_dim_dark"
-            android:backgroundTint="@color/white"
-            android:fontFamily="@font/acme"
-            android:text="Item 1, Item 2 , Side dish 1 , Side dish 2, snack 1 , snack 2, drink 1, drink 2"
-            android:textColor="@color/black"
-            android:textSize="26dp" />
+                <TextView
+                    android:id="@+id/dayview20"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/aclonica"
+                    android:gravity="center"
+                    android:text="BREAKFAST"
+                    android:textColor="@color/design_default_color_on_secondary"
+                    android:textSize="24sp" />
 
-        <TextView
-            android:id="@+id/dayview21"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/aclonica"
-            android:gravity="center"
-            android:text="LUNCH"
-            android:textColor="@color/design_default_color_on_secondary"
-            android:textSize="24sp" />
+                <View
+                    android:id="@+id/divider13"
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:layout_marginBottom="10dp"
+                    android:background="?android:attr/listDivider" />
 
-        <View
-            android:id="@+id/divider14"
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_marginBottom="10dp"
-            android:background="?android:attr/listDivider" />
+                <TextView
+                    android:id="@+id/bfmeal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@android:drawable/divider_horizontal_dim_dark"
+                    android:backgroundTint="@color/white"
+                    android:fontFamily="@font/acme"
+                    android:text="Item 1, Item 2 , Side dish 1 , Side dish 2, snack 1 , snack 2, drink 1, drink 2"
+                    android:textColor="@color/black"
+                    android:textSize="26dp" />
 
-        <TextView
-            android:id="@+id/lmeal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@android:drawable/divider_horizontal_dim_dark"
-            android:backgroundTint="@color/white"
-            android:fontFamily="@font/acme"
-            android:text="Item 1, Item 2 , Side dish 1 , Side dish 2, snack 1 , snack 2, drink 1, drink 2"
-            android:textColor="@color/black"
-            android:textSize="26dp" />
+                <TextView
+                    android:id="@+id/dayview21"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/aclonica"
+                    android:gravity="center"
+                    android:text="LUNCH"
+                    android:textColor="@color/design_default_color_on_secondary"
+                    android:textSize="24sp" />
 
-        <TextView
-            android:id="@+id/dayview22"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/aclonica"
-            android:gravity="center"
-            android:text="SNACKS"
-            android:textColor="@color/design_default_color_on_secondary"
-            android:textSize="24sp" />
+                <View
+                    android:id="@+id/divider14"
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:layout_marginBottom="10dp"
+                    android:background="?android:attr/listDivider" />
 
-        <View
-            android:id="@+id/divider15"
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_marginBottom="10dp"
-            android:background="?android:attr/listDivider" />
+                <TextView
+                    android:id="@+id/lmeal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@android:drawable/divider_horizontal_dim_dark"
+                    android:backgroundTint="@color/white"
+                    android:fontFamily="@font/acme"
+                    android:text="Item 1, Item 2 , Side dish 1 , Side dish 2, snack 1 , snack 2, drink 1, drink 2"
+                    android:textColor="@color/black"
+                    android:textSize="26dp" />
 
-        <TextView
-            android:id="@+id/smeal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@android:drawable/divider_horizontal_dim_dark"
-            android:backgroundTint="@color/white"
-            android:fontFamily="@font/acme"
-            android:text="Item 1, Item 2 , Side dish 1 , Side dish 2, snack 1 , snack 2, drink 1, drink 2"
-            android:textColor="@color/black"
-            android:textSize="26dp" />
+                <TextView
+                    android:id="@+id/dayview22"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/aclonica"
+                    android:gravity="center"
+                    android:text="SNACKS"
+                    android:textColor="@color/design_default_color_on_secondary"
+                    android:textSize="24sp" />
 
-        <TextView
-            android:id="@+id/dayview23"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/aclonica"
-            android:gravity="center"
-            android:text="DINNER"
-            android:textColor="@color/design_default_color_on_secondary"
-            android:textSize="24sp" />
+                <View
+                    android:id="@+id/divider15"
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:layout_marginBottom="10dp"
+                    android:background="?android:attr/listDivider" />
 
-        <View
-            android:id="@+id/divider16"
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:layout_marginBottom="10dp"
-            android:background="?android:attr/listDivider" />
+                <TextView
+                    android:id="@+id/smeal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@android:drawable/divider_horizontal_dim_dark"
+                    android:backgroundTint="@color/white"
+                    android:fontFamily="@font/acme"
+                    android:text="Item 1, Item 2 , Side dish 1 , Side dish 2, snack 1 , snack 2, drink 1, drink 2"
+                    android:textColor="@color/black"
+                    android:textSize="26dp" />
 
-        <TextView
-            android:id="@+id/dmeal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@android:drawable/divider_horizontal_dim_dark"
-            android:backgroundTint="@color/white"
-            android:fontFamily="@font/acme"
-            android:text="Item 1, Item 2 , Side dish 1 , Side dish 2, snack 1 , snack 2, drink 1, drink 2"
-            android:textColor="@color/black"
-            android:textSize="26dp" />
-    </LinearLayout>
-    </ScrollView>
+                <TextView
+                    android:id="@+id/dayview23"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/aclonica"
+                    android:gravity="center"
+                    android:text="DINNER"
+                    android:textColor="@color/design_default_color_on_secondary"
+                    android:textSize="24sp" />
+
+                <View
+                    android:id="@+id/divider16"
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:layout_marginBottom="10dp"
+                    android:background="?android:attr/listDivider" />
+
+                <TextView
+                    android:id="@+id/dmeal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@android:drawable/divider_horizontal_dim_dark"
+                    android:backgroundTint="@color/white"
+                    android:fontFamily="@font/acme"
+                    android:text="Item 1, Item 2 , Side dish 1 , Side dish 2, snack 1 , snack 2, drink 1, drink 2"
+                    android:textColor="@color/black"
+                    android:textSize="26dp" />
+            </LinearLayout>
+        </ScrollView>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
